--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,11 @@ h1 {
     padding: 10px;
     width: 100%; 
 }
+
+/* Contact Page */
+.contact-footer {
+    margin-top: 240px;
+    text-align: center;
+    padding: 10px;
+    width: 100%; 
+}
