--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,17 @@ header h1 {
 .web-development {
     width: 28%; 
 }   
+
+.blueberry-cheesecake {
+    width: 40%; 
+}  
+.calligraphy  {
+    width: 45%; 
+}  
+.travel  {
+    width: 40%; 
+
+}    
 /* Contact Page */
 
 header {
